--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello saksham</p>
+    <p id ="p1">hello saksham</p>
+    <p id="p2">hello Amarjeet</p>
 </body>
 </html>
